# VIOLIN

./: .readthedocs.yaml  LICENSE  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.py
VIOLIN/: formatting.py  in_out.py  network.py  scoring.py  visualize_violin.py
VIOLIN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: .readthedocs.yaml  Legal.rst  acknowledgments.rst  citation.rst  conf.py  files.rst  formatting.rst  in_out.rst  index.rst  installation.rst  license.rst  network.rst  numeric.rst  requirements.txt  scoring.rst  tutorials.rst  utils.rst  visualization.rst
examples/: GPT_summary.csv  INDRA_summary.csv  LLAMA_summary.csv  Name_entity_normalized.ipynb  Regulator_list_checking.ipynb  count.py  count_wo_violin.py  evaluation.ipynb  evaluation_v2.ipynb  evaluation_v3.ipynb  example_summary.csv  hgnc_symbol_dict.json  test_VIOLIN.py  use_VIOLIN.ipynb  use_violin_script.py
examples/indra_search_paper/: CAR_TCELL.csv  CAR_TCELL_reading.xlsx  run_indra_pmcids_biorecipe.py
examples/indra_to_biorecipes/: CAR_TCELL_reading.xlsx  Retrieving statements from the INDRA DB.docx
examples/input/: ModelA.csv  ModelB_biorecipe.xlsx  RA2_0_1_1_reading_biorecipes.xlsx  RA2_0_1_reading_BioRECIPE.xlsx  RA2_0_1_reading_biorecipes.xlsx  modelB.csv  (+31 more)
src/: numeric.py
test/: use_VIOLIN.ipynb  use_violin_script.py
violin.egg-info/: SOURCES.txt  top_level.txt
violin_docs/: Legal.rst  conf.py  installation.rst  network.rst  requirements.txt  scoring.rst  tutorials.rst
violin_tutorial/: README.md  use_VIOLIN.ipynb  use_violin_script.py
(+1418 files in other folders)
